removed fixed nav and extra padding

--- a/res/global.css
+++ b/res/global.css
@@ -26,9 +26,6 @@
     nav {
         width: 100%;
         padding: 20px;
-        position: fixed;
-        top: 0;
-        background-color: #f3f3ef;
     }
     
     .navbar ul {
