--- a/res/play.css
+++ b/res/play.css
@@ -5,10 +5,6 @@ body {
     min-height: 100%;
 }
 
-.content {
-    padding-top: 4em;
-}
-
 
 /* PHOTO GRID */
 
