--- a/res/work.css
+++ b/res/work.css
@@ -14,7 +14,6 @@ body {
     justify-content: space-between;
     margin: 2em;
     padding-bottom: 1em;
-    padding-top: 2em;
 }
 
 .work-tile {
@@ -69,7 +68,7 @@ body {
 /* section 1 styles */
 
 #section1 {
-    padding: 4em 2em 3em;
+    padding: 2em 2em 3em;
     display: flex;
     align-items: center;
 }
